@@ -9,13 +9,10 @@
 #import <UIKit/UIKit.h>
 
 #import "AppDelegate.h"
-#import "SISimon.h"
 
 int main(int argc, char *argv[])
 {
    @autoreleasepool {
-      SIRun();
-		[SIAppBackpack backpack].autorun = NO;
       return UIApplicationMain(argc, argv, nil, NSStringFromClass([AppDelegate class]));
    }
 }
